--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <!-- 플립 코드 -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/Flip.min.js"></script>
   <!-- 스크롤 부드럽게 -->
-  <script src="https://assets.codepen.io/16327/ScrollSmoother.min.js"></script>
+  <!-- <script src="https://assets.codepen.io/16327/ScrollSmoother.min.js"></script> -->
   <script src="mongsri.js" charset="utf-8"></script>
   <script src="mongsri.js" charset="utf-8"></script>
 </html>
