--- a/index.html
+++ b/index.html
@@ -8,101 +8,283 @@
     <link rel="icon" sizes="32x32" type="image/ico" href="./img/pa.ico" />
   </head>
   <body>
-    <header>
-      <div>
-        <img src="./img/logo_c.png" alt="" />
-      </div>
-    </header>
-    <div class="gal">
-      <img src="./img/gal.png" alt="" />
-    </div>
-    <section class="sec2">
-      <div class="slider_wrap">
-        <div class="slider">
-          <div class="item"><img src="./img/si.png" alt="" /></div>
-          <div class="item"><img src="./img/12.png" alt="" /></div>
-          <div class="item"><img src="./img/da.png" alt="" /></div>
-          <div class="item"><img src="./img/jini.png" alt="" /></div>
-          <div class="item"><img src="./img/07.png" alt="" /></div>
-          <div class="item"><img src="./img/suh.png" alt="" /></div>
-          <div class="item"><img src="./img/bada.png" alt="" /></div>
-          <div class="item"><img src="./img/uzoon.png" alt="" /></div>
-          <div class="item"><img src="./img/in.png" alt="" /></div>
-          <div class="item"><img src="./img/mi.png" alt="" /></div>
-          <div class="item"><img src="./img/ga.png" alt="" /></div>
-          <div class="item"><img src="./img/seo.png" alt="" /></div>
-          <div class="item"><img src="./img/so.png" alt="" /></div>
-          <div class="item"><img src="./img/subin.png" alt="" /></div>
-          <div class="item"><img src="./img/duck.png" alt="" /></div>
-          <div class="item"><img src="./img/jun.png" alt="" /></div>
-          <div class="item"><img src="./img/mon.png" alt="" /></div>
+    <div class="bg"></div>
+    <div class="main-content">
+      <header>
+        <div>
+          <img src="./img/logo_c.png" alt="" />
         </div>
-        <p>카드를 클릭하여 넘겨보세요!</p>
-      </div>
-
-      <article class="sample">
-        <div class="sample_box">
-          <p># chapter 1 - 우리들의 추억</p>
-          <div class="inner txt_area">
-            <p>몽실마을의</p>
-            <p class="txt word01">평화로운</p>
-            <p class="txt word02">하루들</p>
-          </div>
-          <p>사진을 클릭하시면 확대해서 보실 수 있습니다.</p>
-        </div>
-      </article>
-
-      <section class="img_flex">
-        <div class="img_box"><img src="./img/4.png" alt="" /></div>
-        <div class="img_box"><img src="./img/5.png" alt="" /></div>
-        <div class="img_box"><img src="./img/6.png" alt="" /></div>
-        <div class="img_box"><img src="./img/7.png" alt="" /></div>
-        <div class="img_box"><img src="./img/8.png" alt="" /></div>
-        <div class="img_box"><img src="./img/9.png" alt="" /></div>
-        <div class="img_box"><img src="./img/10.png" alt="" /></div>
-        <div class="img_box"><img src="./img/11.png" alt="" /></div>
-        <div class="img_box"><img src="./img/a.png" alt="" /></div>
+      </header>
+      <section class="slides">
+        <ul class="list">
+          <li class="slide">
+            <div
+              class="background"
+              style="background-image: url('./img/100.png')"
+            ></div>
+            <div class="content"></div>
+            <div class="content move">
+              <img src="./img/s.png" alt="" style="height: 900px" />
+            </div>
+          </li>
+          <li class="slide">
+            <div
+              class="background"
+              style="background-image: url('./img/gl9.png')"
+            ></div>
+            <div class="content">함께할수록</div>
+          </li>
+          <li class="slide">
+            <div
+              class="background"
+              style="background-image: url('./img/gl6.png')"
+            ></div>
+            <div class="content">마음이 모이는</div>
+          </li>
+          <li class="slide">
+            <div
+              class="background"
+              style="background-image: url('./img/101.png')"
+            ></div>
+            <div class="content">우리의 추억이</div>
+          </li>
+          <li class="slide">
+            <div
+              class="background"
+              style="background-image: url('./img/555.png')"
+            ></div>
+            <div class="content">가득 담겨있는</div>
+          </li>
+          <li class="slide">
+            <div
+              class="background"
+              style="background-image: url('./img/a.png')"
+            ></div>
+            <div class="content">여기는 몽실랜드</div>
+          </li>
+        </ul>
       </section>
-
-      <article class="sample">
-        <div class="sample_box">
-          <p># chapter 2 &nbsp;-&nbsp; 우리가 지어낸 것들</p>
-          <div class="inner txt_area">
-            <p>몽실마을의</p>
-            <p class="txt word03">건축물을</p>
-            <p class="txt word04">둘러보아요</p>
+      <div class="gal">
+        <img src="./img/gal_2.png" alt="" />
+      </div>
+      <section class="sec2">
+        <div class="slider_wrap">
+          <div class="slider">
+            <div class="item"><img src="./img/si.png" alt="" /></div>
+            <div class="item"><img src="./img/12.png" alt="" /></div>
+            <div class="item"><img src="./img/da.png" alt="" /></div>
+            <div class="item"><img src="./img/jini.png" alt="" /></div>
+            <div class="item"><img src="./img/07.png" alt="" /></div>
+            <div class="item"><img src="./img/suh.png" alt="" /></div>
+            <div class="item"><img src="./img/bada.png" alt="" /></div>
+            <div class="item"><img src="./img/uzoon.png" alt="" /></div>
+            <div class="item"><img src="./img/in.png" alt="" /></div>
+            <div class="item"><img src="./img/mi.png" alt="" /></div>
+            <div class="item"><img src="./img/ga.png" alt="" /></div>
+            <div class="item"><img src="./img/seo.png" alt="" /></div>
+            <div class="item"><img src="./img/so.png" alt="" /></div>
+            <div class="item"><img src="./img/subin.png" alt="" /></div>
+            <div class="item"><img src="./img/duck.png" alt="" /></div>
+            <div class="item"><img src="./img/jun.png" alt="" /></div>
+            <div class="item"><img src="./img/mon.png" alt="" /></div>
           </div>
-          <p>사진을 클릭하시면 확대해서 보실 수 있습니다.</p>
+          <p>카드를 클릭하여 넘겨보세요!</p>
         </div>
-      </article>
 
-      <section class="img_flex">
-        <div class="img_box"><img src="./img/g1.png" alt="" /></div>
-        <div class="img_box"><img src="./img/g2.png" alt="" /></div>
-        <div class="img_box"><img src="./img/g3.png" alt="" /></div>
-        <div class="img_box"><img src="./img/gl4.png" alt="" /></div>
-        <div class="img_box"><img src="./img/gl5.png" alt="" /></div>
-        <div class="img_box"><img src="./img/gl6.png" alt="" /></div>
-        <div class="img_box"><img src="./img/gl7.png" alt="" /></div>
-        <div class="img_box"><img src="./img/gl8.png" alt="" /></div>
-        <div class="img_box"><img src="./img/gl9.png" alt="" /></div>
+        <article class="sample">
+          <div class="sample_box">
+            <p style="border: 1px solid #ffebaa; color: #ffebaa">
+              # event - 몽실마을 제 3회 이벤트
+            </p>
+            <div class="inner txt_area">
+              <p style="color: rgb(255, 245, 198)">📷 찰칵 찰칵-</p>
+              <p class="txt word01" style="color: #ffebaa">몽실마을</p>
+              <p class="txt word02" style="color: rgb(214, 214, 214)">
+                사진 대소동!
+              </p>
+            </div>
+            <p style="color: rgb(219, 219, 219)">
+              얼굴을 클릭하시면 해당 마을원의 사진첩으로 이동합니다.
+            </p>
+          </div>
+        </article>
+
+        <section class="face">
+          <a href="#">
+            <div>
+              <img src="./img/f_02.png" alt="" />
+            </div>
+          </a>
+          <a href="#">
+            <div>
+              <img src="./img/f_11.png" alt="" />
+            </div>
+          </a>
+          <a href="#">
+            <div>
+              <img src="./img/f_12 1.png" alt="" />
+            </div>
+          </a>
+          <a href="#">
+            <div>
+              <img src="./img/f_05.png" alt="" />
+            </div>
+          </a>
+          <a href="#">
+            <div>
+              <img src="./img/f_09.png" alt="" />
+            </div>
+          </a>
+          <a href="#">
+            <div>
+              <img src="./img/f_07.png" alt="" />
+            </div>
+          </a>
+
+          <a href="#">
+            <div>
+              <img src="./img/f_01.png" alt="" />
+            </div>
+          </a>
+
+          <a href="#">
+            <div>
+              <img src="./img/f_04.png" alt="" />
+            </div>
+          </a>
+
+          <a href="#">
+            <div>
+              <img src="./img/f_08.png" alt="" />
+            </div>
+          </a>
+
+          <a href="#">
+            <div>
+              <img src="./img/f_10.png" alt="" />
+            </div>
+          </a>
+          <a href="#">
+            <div>
+              <img src="./img/f_06.png" alt="" />
+            </div>
+          </a>
+          <a href="#">
+            <div>
+              <img src="./img/f_03.png" alt="" />
+            </div>
+          </a>
+          <a href="#">
+            <div>
+              <img src="./img/f_13.png" alt="" />
+            </div>
+          </a>
+          <a href="#">
+            <div>
+              <img src="./img/f_14.png" alt="" />
+            </div>
+          </a>
+          <a href="#">
+            <div>
+              <img src="./img/444 1.png" alt="" />
+            </div>
+          </a>
+          <a href="#">
+            <div>
+              <img src="./img/f_123 1.png" alt="" />
+            </div>
+          </a>
+          <!-- <a href="#">
+            <div>
+              <img src="" alt="" />
+            </div>
+          </a> -->
+        </section>
+
+        <article class="sample">
+          <div class="sample_box">
+            <p># chapter 1 - 우리들의 추억</p>
+            <div class="inner txt_area">
+              <p>몽실마을의</p>
+              <p class="txt word01" style="color: rgb(183, 221, 255)">
+                평화로운
+              </p>
+              <p class="txt word02">하루들</p>
+            </div>
+            <p>사진을 클릭하시면 확대해서 보실 수 있습니다.</p>
+          </div>
+        </article>
+
+        <section class="img_flex">
+          <div class="img_box"><img src="./img/4.png" alt="" /></div>
+          <div class="img_box"><img src="./img/5.png" alt="" /></div>
+          <div class="img_box"><img src="./img/6.png" alt="" /></div>
+          <div class="img_box"><img src="./img/7.png" alt="" /></div>
+          <div class="img_box"><img src="./img/8.png" alt="" /></div>
+          <div class="img_box"><img src="./img/9.png" alt="" /></div>
+          <div class="img_box"><img src="./img/10.png" alt="" /></div>
+          <div class="img_box"><img src="./img/11.png" alt="" /></div>
+          <div class="img_box"><img src="./img/a.png" alt="" /></div>
+        </section>
+
+        <article class="sample">
+          <div class="sample_box">
+            <p># chapter 2 &nbsp;-&nbsp; 우리가 지어낸 것들</p>
+            <div class="inner txt_area">
+              <p>몽실마을의</p>
+              <p class="txt word03" style="color: rgb(183, 221, 255)">
+                건축물을
+              </p>
+              <p class="txt word04">둘러보아요</p>
+            </div>
+            <p>사진을 클릭하시면 확대해서 보실 수 있습니다.</p>
+          </div>
+        </article>
+
+        <section class="img_flex">
+          <div class="img_box"><img src="./img/g1.png" alt="" /></div>
+          <div class="img_box"><img src="./img/g2.png" alt="" /></div>
+          <div class="img_box"><img src="./img/g3.png" alt="" /></div>
+          <div class="img_box"><img src="./img/gl4.png" alt="" /></div>
+          <div class="img_box"><img src="./img/gl5.png" alt="" /></div>
+          <div class="img_box"><img src="./img/gl6.png" alt="" /></div>
+          <div class="img_box"><img src="./img/gl7.png" alt="" /></div>
+          <div class="img_box"><img src="./img/gl8.png" alt="" /></div>
+          <div class="img_box"><img src="./img/gl9.png" alt="" /></div>
+        </section>
       </section>
-    </section>
-    <footer></footer>
-    <!-- 이미지 팝업 모달 -->
-    <div id="imgModal" class="img-modal">
-      <div class="modal-bg"></div>
-      <img class="modal-content" id="modalImg" />
-      <button class="close-btn" aria-label="닫기">&times;</button>
+      <footer></footer>
+      <!-- 이미지 팝업 모달 -->
+      <div id="imgModal" class="img-modal">
+        <div class="modal-bg"></div>
+        <img class="modal-content" id="modalImg" />
+        <button class="close-btn" aria-label="닫기">&times;</button>
+      </div>
     </div>
   </body>
+  <!-- Lenis CDN 연결 -->
+  <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.38/bundled/lenis.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
   <!-- 스크롤 트리거 -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js"></script>
   <!-- 플립 코드 -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/Flip.min.js"></script>
-  <!-- 스크롤 부드럽게 -->
-  <!-- <script src="https://assets.codepen.io/16327/ScrollSmoother.min.js"></script> -->
-  <script src="mongsri.js" charset="utf-8"></script>
+  <script>
+    const lenis = new Lenis({
+      wrapper: document.querySelector(".main-content"),
+      content: document.querySelector(".main-content"),
+      duration: 1.2,
+      easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
+      smooth: true,
+    });
+
+    function raf(time) {
+      lenis.raf(time);
+      requestAnimationFrame(raf);
+    }
+
+    requestAnimationFrame(raf);
+  </script>
+
   <script src="mongsri.js" charset="utf-8"></script>
 </html>
