--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ko" dir="ltr">
   <head>
     <meta charset="utf-8" />
     <title>몽실마을 갤러리</title>
@@ -12,7 +12,9 @@
     <div class="main-content">
       <header>
         <div>
-          <img src="./img/logo_c.png" alt="" />
+          <a href="/">
+            <img src="./img/logo_c.png" alt="" />
+          </a>
         </div>
       </header>
       <section class="slides">
@@ -110,7 +112,7 @@
         </article>
 
         <section class="face">
-          <a href="#">
+          <a href="./face/face_1.html">
             <div>
               <img src="./img/f_02.png" alt="" />
             </div>
@@ -194,11 +196,11 @@
               <img src="./img/f_123 1.png" alt="" />
             </div>
           </a>
-          <!-- <a href="#">
+          <a href="#">
             <div>
-              <img src="" alt="" />
+              <img src="./img/f_00 1.png" alt="" />
             </div>
-          </a> -->
+          </a>
         </section>
 
         <article class="sample">
@@ -251,6 +253,58 @@
           <div class="img_box"><img src="./img/gl7.png" alt="" /></div>
           <div class="img_box"><img src="./img/gl8.png" alt="" /></div>
           <div class="img_box"><img src="./img/gl9.png" alt="" /></div>
+        </section>
+
+        <article class="sample">
+          <div class="sample_box">
+            <p># chapter 3 &nbsp;-&nbsp; 모자란게 매력이다!</p>
+            <div class="inner txt_area">
+              <p>몽실마을의</p>
+              <p class="txt word03" style="color: rgb(183, 221, 255)">
+                바보같은
+              </p>
+              <p class="txt word04">순간들!</p>
+            </div>
+            <p>사진을 클릭하시면 확대해서 보실 수 있습니다.</p>
+          </div>
+        </article>
+
+        <section class="img_flex">
+          <div class="img_box"><img src="./img/a1.png" alt="" /></div>
+          <div class="img_box"><img src="./img/a2.png" alt="" /></div>
+          <div class="img_box"><img src="./img/a3.png" alt="" /></div>
+          <div class="img_box"><img src="./img/a4.png" alt="" /></div>
+          <div class="img_box"><img src="./img/a5.png" alt="" /></div>
+          <div class="img_box"><img src="./img/a6.png" alt="" /></div>
+          <div class="img_box"><img src="./img/a7.png" alt="" /></div>
+          <div class="img_box"><img src="./img/a8.png" alt="" /></div>
+          <div class="img_box"><img src="./img/a9.png" alt="" /></div>
+        </section>
+
+        <article class="sample">
+          <div class="sample_box">
+            <p># chapter 4 &nbsp;-&nbsp; 훔쳐봐도 될까요..?</p>
+            <div class="inner txt_area">
+              <p>몽실마을의</p>
+              <p class="txt word03" style="color: rgb(183, 221, 255)">
+                행복한 일상
+              </p>
+              <p class="txt word04">훔쳐보기-</p>
+            </div>
+            <p>사진을 클릭하시면 확대해서 보실 수 있습니다.</p>
+          </div>
+        </article>
+
+        <section class="img_flex">
+          <div class="img_box"><img src="./img/b1.png" alt="" /></div>
+          <div class="img_box"><img src="./img/b2.png" alt="" /></div>
+          <div class="img_box"><img src="./img/b3.png" alt="" /></div>
+          <div class="img_box"><img src="./img/b4.png" alt="" /></div>
+          <div class="img_box"><img src="./img/b5.png" alt="" /></div>
+          <div class="img_box"><img src="./img/b6.png" alt="" /></div>
+          <div class="img_box"><img src="./img/b7.png" alt="" /></div>
+          <div class="img_box"><img src="./img/b8.png" alt="" /></div>
+          <div class="img_box"><img src="./img/b9.png" alt="" /></div>
         </section>
       </section>
       <footer></footer>
