--- a/face/face_1.html
+++ b/face/face_1.html
@@ -8,7 +8,11 @@
     <link rel="icon" sizes="32x32" type="image/ico" href="../img/pa.ico" />
   </head>
   <body>
-    <div class="bg"></div>
+    
+    <div class="bg"><div class="cursor">
+      <div class="cur"><img src="./img/curs.png" alt=""></div>
+    </div></div>
+    
     <div class="main-content">
       <header>
         <div>
@@ -21,8 +25,11 @@
       <div class="face">
         <div>
           <img src="../img/mon.png" alt="">
+          <img src="./img/001.png" alt="">
+          <img src="./img/003.png" alt="">
+          <img src="./img/004.png" alt="">
         </div>
-        <p> 몽실이의 갤러리</p>
+        <p>몽실이의 갤러리</p>
         <p>scroll down</p>
       </div>
 
@@ -89,9 +96,75 @@
       </article>
 
       <section class="img_flex">
-        <div class="img_box"><img src="../img/4.png" alt="" /></div>
-        <div class="img_box"><img src="../img/5.png" alt="" /></div>
+        <div class="img_box"><img src="./img/s_2_1.png" alt="" /></div>
+        <div class="img_box"><img src="./img/s_2_2.png" alt="" /></div>
       </section>
+
+      <article class="sample">
+        <div class="sample_box">
+          <p>예시: 3번째 이벤트 - 두번째 사진</p>
+          <i style="display: block; width: fit-content; margin: 0px auto;">
+            <img src="./img/s_3.png" alt="" style="height: 300px;"/>
+          </i>
+          <i style="display: block; width: fit-content; margin: 0px auto; margin-bottom: 50px;">
+            <img src="./img/s_4.png" alt="" style="height: 440px;"/>
+          </i>
+          <div class="inner txt_area">
+            <p>지니의</p>
+            <p class="txt word01">옥수수</p>
+            <p class="txt word02" style="color: rgb(183, 221, 255);">도벽사건!</p>
+          </div>
+          <p>사진을 클릭하시면 확대해서 보실 수 있습니다.</p>
+        </div>
+      </article>
+
+      <section class="img_flex">
+        <div class="img_box"><img src="./img/s_3_1.png" alt="" /></div>
+        <div class="img_box"><img src="./img/s_3_2.png" alt="" /></div>
+      </section>
+
+      <article class="sample">
+        <div class="sample_box">
+          <p style="background-color: rgb(255, 224, 51);">예시: 3번째 이벤트 - 히든사진</p>
+          <i style="display: block; width: fit-content; margin: 0px auto;">
+            <img src="./img/s_5.png" alt="" style="height: 300px;"/>
+          </i>
+          <i style="display: block; width: fit-content; margin: 0px auto; margin-bottom: 50px;">
+            <img src="./img/s_6.png" alt="" style="height: 440px;"/>
+          </i>
+          <div class="inner txt_area">
+            <p style="color: rgb(255, 239, 148);">준우의</p>
+            <p class="txt word01" style="color: rgb(255, 239, 148);">???를</p>
+            <p class="txt word02" style="color: rgb(255, 224, 51);">찾아서!</p>
+          </div>
+          <p>사진을 클릭하시면 확대해서 보실 수 있습니다.</p>
+        </div>
+      </article>
+
+      <section class="img_flex">
+        <div class="img_box"><img src="./img/s_5_1.png" alt="" /></div>
+        <div class="img_box"><img src="./img/s_6_1.png" alt="" /></div>
+      </section>
+
+      <article class="sample" style="height: 300px;">
+        <div class="sample_box" >
+          <p style="background-color: #c8efff;">몽실이의 사진첩</p>
+          <div class="inner txt_area">
+            <p>📷 몽실이가</p>
+            <p class="txt word01" style="color: rgb(183, 221, 255);">직접 찍은</p>
+            <p class="txt word02" >사진들</p>
+          </div>
+          <p>사진을 클릭하시면 확대해서 보실 수 있습니다.</p>
+        </div>
+      </article>
+
+      <section class="img_flex">
+        <div class="img_box"><img src="./img/se_f_1.png" alt="" /></div>
+        <div class="img_box"><img src="./img/se_f_2.png" alt="" /></div>
+        <div class="img_box"><img src="./img/se_f_3.png" alt="" /></div>
+        <div class="img_box"><img src="./img/se_f_4.png" alt="" /></div>
+      </section>
+
       <footer></footer>
 
        <!-- 이미지 팝업 모달 -->
