--- a/index.html
+++ b/index.html
@@ -227,6 +227,9 @@
           <div class="img_box"><img src="./img/10.png" alt="" /></div>
           <div class="img_box"><img src="./img/11.png" alt="" /></div>
           <div class="img_box"><img src="./img/a.png" alt="" /></div>
+          <div class="img_box"><img src="./img/12_1.png" alt="" /></div>
+          <div class="img_box"><img src="./img/13.png" alt="" /></div>
+          <div class="img_box"><img src="./img/14.png" alt="" /></div>
         </section>
 
         <article class="sample">
@@ -279,6 +282,9 @@
           <div class="img_box"><img src="./img/a7.png" alt="" /></div>
           <div class="img_box"><img src="./img/a8.png" alt="" /></div>
           <div class="img_box"><img src="./img/a9.png" alt="" /></div>
+          <div class="img_box"><img src="./img/a10.png" alt="" /></div>
+          <div class="img_box"><img src="./img/a11.png" alt="" /></div>
+          <div class="img_box"><img src="./img/a12.png" alt="" /></div>
         </section>
 
         <article class="sample">
@@ -305,6 +311,33 @@
           <div class="img_box"><img src="./img/b7.png" alt="" /></div>
           <div class="img_box"><img src="./img/b8.png" alt="" /></div>
           <div class="img_box"><img src="./img/b9.png" alt="" /></div>
+          <div class="img_box"><img src="./img/b10.png" alt="" /></div>
+          <div class="img_box"><img src="./img/b11.png" alt="" /></div>
+          <div class="img_box"><img src="./img/b12.png" alt="" /></div>
+        </section>
+
+        <article class="sample">
+          <div class="sample_box">
+            <p># chapter 5 &nbsp;-&nbsp; 우리는 하나니까!</p>
+            <div class="inner txt_area">
+              <p>몽실마을의</p>
+              <p class="txt word03" style="color: rgb(183, 221, 255)">이벤트</p>
+              <p class="txt word04">모아보기-</p>
+            </div>
+            <p>사진을 클릭하시면 확대해서 보실 수 있습니다.</p>
+          </div>
+        </article>
+
+        <section class="img_flex">
+          <div class="img_box"><img src="./img/c1.png" alt="" /></div>
+          <div class="img_box"><img src="./img/c2.png" alt="" /></div>
+          <div class="img_box"><img src="./img/c3.png" alt="" /></div>
+          <div class="img_box"><img src="./img/c4.png" alt="" /></div>
+          <div class="img_box"><img src="./img/c5.png" alt="" /></div>
+          <div class="img_box"><img src="./img/c6.png" alt="" /></div>
+          <div class="img_box"><img src="./img/c7.png" alt="" /></div>
+          <div class="img_box"><img src="./img/c8.png" alt="" /></div>
+          <div class="img_box"><img src="./img/c9.png" alt="" /></div>
         </section>
       </section>
       <footer></footer>
