--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko" dir="ltr">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>몽실마을 갤러리</title>
     <link rel="stylesheet" href="mongsri.css" />
     <!-- 파비콘 연결 -->
