--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               <img src="./img/f_02.png" alt="" />
             </div>
           </a>
-          <a href="#">
+          <a href="./face/face_2.html">
             <div>
               <img src="./img/f_11.png" alt="" />
             </div>
