--- a/face/face_2.html
+++ b/face/face_2.html
@@ -45,7 +45,7 @@
                   닉네임 : 준우<br>
                   성별 : 남자<br>
                   나이 : 26살 / 00년생<br>
-                  취미 : <br>
+                  취미 : 산책<br>
                 </div>
               </div>
               <div class="accordion">
@@ -58,18 +58,18 @@
               <div class="accordion">
                 <div class="title">좋아하는 것들</div>
                 <div class="text">
-                  - 차타고 드라이브 하기<br>
-                  - 게임하기<br>
-                  - 돈 모아서 사고 싶은거 하나씩 장만하기<br>
-                  - 재미있는 영상보기
+                  - 비오는 날 차마시기<br>
+                  - 애니 / 영화보기<br>
+                  - 드라이브 하기<br>
+                  - 먹방하기
                 </div>
               </div>
               <div class="accordion">
                 <div class="title">준우가 말해요</div>
                 <div class="text">
-                  안녕하세요 몽실마을 몽실입니다.<br>
-                  마을 갤러리 사이트를 통해<br>
-                  여러분의 추억을 보관하셨으면 좋겠어요 😊
+                  안녕하세요 몽실 마을 부촌장 준우입니다.<br>
+                  다들 마을원들이랑 재밌게 게임 즐겼으면 좋겠고<br>
+                  더욱더 행복한 마을을 만들도록 하겠습니다.~ ㅇㅅㅇv
                 </div>
               </div>
             </div>
@@ -91,10 +91,10 @@
       </article>
 
       <section class="img_flex">
-        <div class="img_box"><img src="./img/se_f_1.png" alt="" /></div>
-        <div class="img_box"><img src="./img/se_f_2.png" alt="" /></div>
-        <div class="img_box"><img src="./img/se_f_3.png" alt="" /></div>
-        <div class="img_box"><img src="./img/se_f_4.png" alt="" /></div>
+        <div class="img_box"><img src="./img/j01.png" alt="" /></div>
+        <div class="img_box"><img src="./img/j02.png" alt="" /></div>
+        <div class="img_box"><img src="./img/j03.png" alt="" /></div>
+        <div class="img_box"><img src="./img/j04.png" alt="" /></div>
       </section>
 
       <footer></footer>
