--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <img src="./img/f_11.png" alt="" />
             </div>
           </a>
-          <a href="#">
+          <a href="./face/face_3.html">
             <div>
               <img src="./img/f_12 1.png" alt="" />
             </div>
