--- a/face/face_11.html
+++ b/face/face_11.html
@@ -120,8 +120,8 @@
       </article>
 
       <section class="img_flex">
-        <div class="img_box"><img src="./img/fail.png" alt="" /></div>
-        <div class="img_box"><img src="./img/fail.png" alt="" /></div>
+        <div class="img_box"><img src="./img/uz_c_3.png" alt="" /></div>
+        <div class="img_box"><img src="./img/uz_c_4.png" alt="" /></div>
       </section>
 
       <article class="sample">
