--- a/index.html
+++ b/index.html
@@ -237,6 +237,12 @@
           <div class="img_box"><img src="./img/12_1.png" alt="" /></div>
           <div class="img_box"><img src="./img/13.png" alt="" /></div>
           <div class="img_box"><img src="./img/14.png" alt="" /></div>
+          <div class="img_box"><img src="./img/15.png" alt="" /></div>
+          <div class="img_box"><img src="./img/16.png" alt="" /></div>
+          <div class="img_box"><img src="./img/17.png" alt="" /></div>
+          <div class="img_box"><img src="./img/18.png" alt="" /></div>
+          <div class="img_box"><img src="./img/19.png" alt="" /></div>
+          <div class="img_box"><img src="./img/20.png" alt="" /></div>
         </section>
 
         <article class="sample">
@@ -346,6 +352,31 @@
           <div class="img_box"><img src="./img/c8.png" alt="" /></div>
           <div class="img_box"><img src="./img/c9.png" alt="" /></div>
         </section>
+
+        <article class="sample">
+          <div class="sample_box">
+            <p># chapter 6 &nbsp;-&nbsp; 몽실마을 미술관 둘러보기!</p>
+            <div class="inner txt_area">
+              <p>몽실마을의</p>
+              <p class="txt word03" style="color: rgb(183, 221, 255)">그림을</p>
+              <p class="txt word04">둘러보자-</p>
+            </div>
+            <p>사진을 클릭하시면 확대해서 보실 수 있습니다.</p>
+          </div>
+        </article>
+
+        <section class="img_flex">
+          <div class="img_box"><img src="./img/d1.png" alt="" /></div>
+          <div class="img_box"><img src="./img/d2.png" alt="" /></div>
+          <div class="img_box"><img src="./img/d3.png" alt="" /></div>
+          <div class="img_box"><img src="./img/d4.png" alt="" /></div>
+          <div class="img_box"><img src="./img/d5.png" alt="" /></div>
+          <div class="img_box"><img src="./img/d6.png" alt="" /></div>
+          <div class="img_box"><img src="./img/d7.png" alt="" /></div>
+          <div class="img_box"><img src="./img/d8.png" alt="" /></div>
+          <div class="img_box"><img src="./img/d9.png" alt="" /></div>
+        </section>
+      </section>
       </section>
       <footer></footer>
       <!-- 이미지 팝업 모달 -->
